--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,18 +1,20 @@
 #seccion {
   font-family: 'Josefin Sans', sans-serif;
-  font-size: 25px;
+  font-size: 24px;
   margin-top: 25px;
 }
 
 .franjasDobles {
-  margin: 0;
+  margin: 50px 100px;
   background: yellow;
   height: 70px;
+  width: 230px
 }
 
 .franjaUnica {
-  margin: 0;
+  margin: 50px 100px;
   border: 1px solid black;
-  background: pink;
+  background: #FE2E64;
   height: 70px;
+  width: 230px
 }
