--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -5,29 +5,31 @@
   margin-left: 100px;
 }
 
-#laboratoria {
+/*#laboratoria {
    padding-top: 10px;
    display: inline-block;
    margin: 10px;
    background: yellow;
    height: 30px;
    width: 130px;
-}
+}*/
 
 .franjasDobles {
   padding-top: 10px;
+  padding-left: 5px;
   display: inline-block;
   margin: 10px;
   background: yellow;
-  height: 30px;
+  height: 70px;
   width: 240px;
 }
 
 .franjaUnica {
   padding-top: 10px;
+  padding-left: 5px;
   display: inline-block;
   margin: 10px;
   background: #FE2E64;
-  height: 30px;
-  width: 30px
+  height: 70px;
+  width: 240px
 }
