--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -33,3 +33,24 @@
   height: 70px;
   width: 240px
 }
+
+/*seccion de cuadritos*/
+div{
+    border: 1px solid black;
+    padding: 10px;
+    margin: 10px;
+    background-color: darkgrey;
+    width: 60px;
+    height: 60px;
+    display: inline-block;
+}
+.cuadradoPadre{
+    position: relative;
+    display: block;
+    width: 320px;
+    height: 100px;
+}
+
+#solito {
+    display: block;
+}
